--- a/src/components/ticket/_media.scss
+++ b/src/components/ticket/_media.scss
@@ -1,3 +1,10 @@
+@media screen and (max-width: 525px) {
+	.ticket {
+		width: 100%;
+	}
+}
+
+
 @media screen and (max-width: 320px) {
 	.ticket {
 		width: 300px;
