--- a/src/components/checkboxes/_media.scss
+++ b/src/components/checkboxes/_media.scss
@@ -1,3 +1,11 @@
+@media screen and (max-width: 780px) {
+	.checkboxes {
+		width: 100%;
+		margin-right: 0;
+		margin-bottom: 20px;
+	}
+}
+
 @media screen and (max-width: 320px) {
 	.checkboxes {
 		width: 320px;
