--- a/src/components/sort/_media.scss
+++ b/src/components/sort/_media.scss
@@ -1,5 +1,11 @@
+@media screen and (max-width: 525px) {
+	.sort {
+		width: 33.33%;
+	}
+}
+
 @media screen and (max-width: 320px) {
-	.sort__btn {
+	.sort {
 		width: 100px;
 		font-size: 10px;
 	}
