--- a/src/components/sort/sort.module.scss
+++ b/src/components/sort/sort.module.scss
@@ -1,9 +1,16 @@
-.sort__btn {
+.fieldset {
+	border: none;
+	display: flex;
+}
+
+.sort {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 168px;
 	height: 50px;
 	background-color: #FFF;
 	color: #4A4A4A;
-	text-align: center;
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 20px;
@@ -14,17 +21,17 @@
 	cursor: pointer;
 }
 
-.sort__btn:first-child {
+.sort:first-child {
 	border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 
-.sort__btn:last-child {
+.sort:last-child {
 	border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
-.sort__btn:hover {
+.sort:hover {
 	background-color: #F1FCFF;
 }
 
@@ -36,6 +43,14 @@
 .active:hover {
 	background-color: #188be9;
 	color: #FFF;
+}
+
+.sort__radio {
+	display: none;
+}
+
+.sort__label {
+	cursor: pointer;
 }
 
 @import "media";
